# bumscan

./: .gitignore  docker-compose.yml  git_token.txt
bumscan_backend/: .gitignore  Dockerfile  manage.py  pyproject.toml
bumscan_backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
bumscan_backend/api/migrations/: 0001_initial.py  0002_exercise_slug_exercisegroup_slug_muscle_slug.py
bumscan_backend/bumscan_backend/: asgi.py  settings.py  urls.py  wsgi.py
